# omnifs

./: .clippy.toml  .dockerignore  .gitignore  ACCEPTANCE.md  AGENTS.md  BOT_APPLY_TEST.md  CHANGELOG.md  CI-NATIVE.md  CLAUDE.md  CLEANUPS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PLAN.md  PLAN_JUST.md  README.md  RELEASING.md  cliff.toml  compose.yaml  dist-workspace.toml  justfile  notes.md  rust-toolchain.toml  rustfmt.toml
bench/host-cache/: Cargo.toml  README.md  results-n30k.txt
bench/host-cache/src/: main.rs  workload.rs
crates/cli/: Cargo.toml  README.md  build.rs
crates/cli/src/: app_context.rs  auth_manifest_view.rs  auth_mount.rs  auth_readiness.rs  builtin_catalog.rs  catalog.rs  cli.rs  config.rs  container_name.rs  credential_target.rs  dev_mounts.rs  dev_support.rs  image_ref.rs  lib.rs  main.rs  mount_report.rs  mount_tree.rs  outcome.rs  paths.rs  presentation.rs  proc_mounts.rs  runtime.rs  runtime_selection.rs  runtime_target.rs  session.rs  status.rs  test_support.rs  token_source.rs
crates/cli/tests/: paths.rs  tracing_silent.rs
crates/host/: Cargo.toml  README.md  build.rs
crates/host/src/: lib.rs  mount.rs  path_prefix.rs  registry.rs
crates/host/tests/: auth_test.rs  cache_l0_test.rs  cache_l2_test.rs  cache_record_test.rs  callout_tracing.rs  capability_test.rs  config_test.rs  correlation_test.rs  provider_routes_test.rs  runtime_test.rs
crates/omnifs-api/: Cargo.toml
crates/omnifs-api/openapi/: daemon.json
crates/omnifs-api/src/: control.rs  lib.rs
crates/omnifs-auth/: Cargo.toml  README.md
crates/omnifs-auth/src/: callback.rs  client.rs  error.rs  lib.rs  request.rs  service.rs  test_support.rs  tests.rs
crates/omnifs-cache/: Cargo.toml
crates/omnifs-cache/src/: lib.rs  object.rs  view.rs
crates/omnifs-cache/tests/: cache_disk_test.rs  cache_mem_test.rs  cache_record_test.rs
crates/omnifs-caps/: Cargo.toml
crates/omnifs-caps/src/: allowlist.rs  check.rs  lib.rs  matching.rs  model.rs  resolve.rs
crates/omnifs-cli/: Cargo.toml  README.md  build.rs
crates/omnifs-cli/src/: app_context.rs  backend.rs  capability.rs  catalog.rs  cli.rs  client.rs  config.rs  container_name.rs  contract_preflight.rs  credential_target.rs  daemon_launch.rs  daemon_teardown.rs  dev_mounts.rs  dev_support.rs  docker.rs  error.rs  frontend_backend.rs  frontend_container.rs  guest_image_pull.rs  host_launch.rs  host_runner.rs  host_teardown.rs  image.rs  image_ref.rs  inventory.rs  krunkit_backend.rs  kubernetes_testenv.rs  launch.rs  launch_backend.rs  launch_record.rs  lib.rs  libkrun_runner.rs  live.rs  local_backend.rs  main.rs  metrics.rs  mount_config.rs  mount_report.rs  mount_tree.rs  native_runtime.rs  (+23 more)
crates/omnifs-cli/tests/: cli_contract.rs  cli_redesign_contract.rs  frontend_conformance.rs  golden_path.rs  lifecycle_acceptance.rs  paths.rs  skill_install.rs
crates/omnifs-core/: Cargo.toml
crates/omnifs-core/src/: auth.rs  content_type.rs  lib.rs  mount.rs  path.rs  provider.rs  view.rs
crates/omnifs-creds/: Cargo.toml
crates/omnifs-creds/src/: file_store.rs  keyring_store.rs  lib.rs  memory_store.rs
crates/omnifs-daemon/: Cargo.toml
crates/omnifs-daemon/src/: app.rs  context.rs  frontend.rs  frontends.rs  launch.rs  lib.rs  main.rs  mounts.rs  paths.rs  proc_mounts.rs  server.rs
crates/omnifs-daemon/tests/: frontend_conformance.rs
crates/omnifs-embed-metadata/: Cargo.toml
crates/omnifs-embed-metadata/src/: main.rs
crates/omnifs-engine/: Cargo.toml
crates/omnifs-engine/src/: auth_inject.rs  authority.rs  capability.rs  clock.rs  coalesce.rs  inspect.rs  lib.rs  log_redaction.rs  object_id.rs  pagination.rs  serving.rs  singleflight.rs  snapshot.rs  test_support.rs  tree_refs.rs  view.rs
crates/omnifs-engine/tests/: auth_refresh_characterize.rs  auth_refresh_loop.rs  auth_test.rs  cache_disk_test.rs  cache_mem_test.rs  cache_record_test.rs  callout_tracing.rs  concurrency_test.rs  effects_semantics.rs  namespace_surface.rs  object_cache_test.rs  pagination_test.rs  runtime_test.rs  tree_read.rs  tree_resolve_list.rs  tree_synthetic.rs  tree_worldview.rs
crates/omnifs-fixture/: Cargo.toml
crates/omnifs-fixture/src/: lib.rs
crates/omnifs-fuse/: Cargo.toml
crates/omnifs-fuse/src/: common.rs  errno.rs  filesystem.rs  inode.rs  lib.rs  listing.rs  lookup.rs  mount.rs  ops.rs  read.rs  read_helpers.rs  synthetic.rs  tests.rs  trace.rs
crates/omnifs-fuse/tests/: fuse_live_mount_concurrency.rs
crates/omnifs-home/: Cargo.toml
crates/omnifs-home/src/: lib.rs
crates/omnifs-host/: Cargo.toml  README.md  build.rs
crates/omnifs-host/src/: agents_doc.rs  archive.rs  auth.rs  blob.rs  blob_cache.rs  callouts.rs  capability.rs  clock.rs  cloner.rs  coalesce.rs  git.rs  http.rs  inflight.rs  inspector.rs  instance.rs  invalidation.rs  lib.rs  log_redaction.rs  manifest.rs  materialize.rs  namespace.rs  object_id.rs  op.rs  op_lifecycle.rs  op_validate.rs  pagination.rs  path_key.rs  projection.rs  protocol_path.rs  registry.rs  runtime.rs  singleflight.rs  tree_refs.rs  wasi.rs  wit_protocol.rs
crates/omnifs-host/tests/: auth_refresh_characterize.rs  auth_test.rs  callout_tracing.rs  concurrency_test.rs  effects_semantics.rs  object_cache_test.rs  pagination_test.rs  runtime_test.rs
crates/omnifs-inspector/: Cargo.toml
crates/omnifs-inspector/src/: event.rs  outcome.rs  redaction.rs  wire.rs  writer.rs
crates/omnifs-itest/: Cargo.toml
crates/omnifs-itest/src/: lib.rs  live.rs  matrix.rs  scenario.rs
crates/omnifs-itest/tests/: live_growth.rs  pagination_exhaustive.rs  tree_conformance.rs
crates/omnifs-libkrun/: Cargo.toml
crates/omnifs-libkrun/src/: api.rs  launch.rs  lib.rs  main.rs
crates/omnifs-model/: Cargo.toml
crates/omnifs-model/src/: credentials.rs  (+2 more)
crates/omnifs-mount/: Cargo.toml
crates/omnifs-mount-schema/: Cargo.toml  README.md
crates/omnifs-mtab/: Cargo.toml
crates/omnifs-namespace-wire/: Cargo.toml
crates/omnifs-nfs/: Cargo.toml
crates/omnifs-provider/: Cargo.toml  README.md
crates/omnifs-release/: Cargo.toml
crates/omnifs-sdk-macros/: Cargo.toml  README.md
(+1439 files in other folders)
