[workspace]
resolver = "2"
members = [
    "crates/*",
    "providers/arxiv",
    "providers/github",
    "providers/dns",
    "providers/test",
]
default-members = ["crates/cli", "crates/host"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raulk/omnifs"
homepage = "https://github.com/raulk/omnifs"
readme = "README.md"

[workspace.dependencies]
wasmtime = { version = "43", features = ["component-model", "runtime"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
jsonschema = "0.46"
postcard = { version = "1", features = ["alloc"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
parking_lot = "0.12"
tempfile = "3"
libc = "0.2"
anyhow = "1"
redb = "2"
moka = { version = "0.12", features = ["sync"] }
hashbrown = "0.15"
http = "1"
strum = { version = "0.27", features = ["derive"] }
percent-encoding = "2"
url = "2"
time = { version = "0.3", default-features = false, features = ["std", "parsing"] }
quick-xml = { version = "0.38", features = ["serialize", "overlapped-lists"] }
tar = "0.4"
flate2 = "1"
zip = { version = "5", default-features = false, features = ["deflate"] }
sha2 = "0.10"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[workspace.lints.rust]
unsafe_code = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
