[workspace]
resolver = "2"
members = [
    "crates/*",
    "providers/arxiv",
    "providers/db",
    "providers/docker",
    "providers/github",
    "providers/dns",
    "providers/kubernetes",
    "providers/linear",
    "providers/oura",
    "providers/test",
]
default-members = ["crates/omnifs-cli", "crates/omnifs-host", "crates/omnifs-daemon"]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xff-ai/omnifs"
homepage = "https://github.com/0xff-ai/omnifs"
readme = "README.md"

[workspace.dependencies]
omnifs-api = { version = "0.2.1", path = "crates/omnifs-api" }
omnifs-auth = { version = "0.2.1", path = "crates/omnifs-auth" }
omnifs-creds = { version = "0.2.1", path = "crates/omnifs-creds" }
omnifs-fuse = { version = "0.2.1", path = "crates/omnifs-fuse" }
omnifs-home = { version = "0.2.1", path = "crates/omnifs-home" }
omnifs-host = { version = "0.2.1", path = "crates/omnifs-host" }
omnifs-inspector = { version = "0.2.1", path = "crates/omnifs-inspector" }
omnifs-core = { version = "0.2.1", path = "crates/omnifs-core" }
omnifs-mount = { version = "0.2.1", path = "crates/omnifs-mount" }
omnifs-provider = { version = "0.2.1", path = "crates/omnifs-provider" }
omnifs-sdk = { version = "0.2.1", path = "crates/omnifs-sdk" }
omnifs-sdk-macros = { version = "0.2.1", path = "crates/omnifs-sdk-macros" }
omnifs-cache = { version = "0.2.1", path = "crates/omnifs-cache" }
omnifs-wit = { version = "0.2.1", path = "crates/omnifs-wit" }
wasmtime = { version = "43", default-features = false, features = ["cache", "component-model", "cranelift", "runtime"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = "5.5"
indexmap = { version = "2", features = ["serde"] }
schemars = "1"
jsonschema = { version = "0.46", default-features = false }
postcard = { version = "1", features = ["alloc"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
parking_lot = "0.12"
tempfile = "3"
libc = "0.2"
anyhow = "1"
redb = "2"
moka = { version = "0.12", features = ["sync"] }
hashbrown = "0.15"
http = "1"
mime = "0.3"
strum = { version = "0.27", features = ["derive"] }
percent-encoding = "2"
url = "2"
time = { version = "0.3", default-features = false, features = ["std", "parsing"] }
quick-xml = { version = "0.38", features = ["serialize", "overlapped-lists"] }
tar = "0.4"
flate2 = "1"
zip = { version = "5", default-features = false, features = ["deflate"] }
sha2 = "0.10"
fs2 = "0.4"
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
webbrowser = "1"
arc-swap = "1"
async_singleflight = "0.6"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[workspace.lints.rust]
unsafe_code = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = "symbols"
