[package]
name = "omnifs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for mounting OmnIFS virtual filesystems"
categories = ["filesystem", "command-line-utilities"]
keywords = ["omnifs", "fuse", "filesystem", "wasm", "cli"]

[[bin]]
name = "omnifs"
path = "src/main.rs"

[dependencies]
omnifs-host = { version = "0.1.0", path = "../host" }
omnifs-mount-schema = { version = "0.1.0", path = "../omnifs-mount-schema" }
clap = { workspace = true }
dirs-next = "2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
