[package]
name = "omnifs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for mounting OmnIFS virtual filesystems"
categories = ["filesystem", "command-line-utilities"]
keywords = ["omnifs", "fuse", "filesystem", "wasm", "cli"]

[[bin]]
name = "omnifs"
path = "src/main.rs"

[lib]
name = "omnifs_cli"
path = "src/lib.rs"

[dependencies]
omnifs-host = { version = "0.1.0", path = "../host" }
omnifs-mount-schema = { version = "0.1.0", path = "../omnifs-mount-schema" }
omnifs-creds = { version = "0.1.0", path = "../omnifs-creds" }
omnifs-auth = { version = "0.1.0", path = "../omnifs-auth" }
omnifs-model = { version = "0.1.0", path = "../omnifs-model" }
clap = { workspace = true }
clap_complete = "4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
strsim = "0.11"
secrecy = "0.10"
anstream = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
indicatif = "0.17"
comfy-table = "7"
inquire = "0.7"
arboard = { version = "3", default-features = false }
time = { workspace = true }
bollard = "0.21"
futures-util = "0.3"
webbrowser = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
