[package]
name = "omnifs-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Host runtime for the OmnIFS virtual filesystem with WASM provider support"
categories = ["filesystem", "wasm"]
keywords = ["omnifs", "fuse", "wasm", "wasmtime", "filesystem"]

[dependencies]
wasmtime = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }
dirs-next = "2"
futures = "0.3"
gix = { version = "0.72", default-features = false, features = ["blocking-network-client"] }
url = "2"
wasmtime-wasi = "43"
redb = { workspace = true }
moka = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
omnifs-mount-schema = { version = "0.1.0", path = "../omnifs-mount-schema" }

[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.17"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wasmtime = { workspace = true }

[lints]
workspace = true
