[package]
name = "omnifs-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Control API types shared by the omnifs CLI and the omnifsd daemon"
categories = ["filesystem", "api-bindings"]
keywords = ["omnifs", "daemon", "api"]

[dependencies]
serde = { workspace = true }
utoipa = { workspace = true }

[package.metadata.dist]
dist = false

[lints]
workspace = true
