[package]
name = "omnifs-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Control API types shared by the omnifs CLI and daemon runtime"
categories = ["filesystem", "api-bindings"]
keywords = ["omnifs", "daemon", "api"]

[dependencies]
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
