[package]
name = "omnifs-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Typed local control protocol types shared by the omnifs CLI and daemon runtime"
categories = ["filesystem", "api-bindings"]
keywords = ["omnifs", "daemon", "protocol"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
