[package]
name = "omnifs-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Generic host-side OAuth protocol engine for omnifs."
readme = "README.md"

[dependencies]
omnifs-workspace = { workspace = true }
arc-swap = { workspace = true }
async_singleflight = { workspace = true }
dashmap = { workspace = true }
http = { workspace = true }
oauth2 = { workspace = true }
rand = { version = "0.9", features = ["small_rng"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
secrecy = "0.10"
serde_json = { workspace = true }
serde_urlencoded = "0.7"
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }

[lints]
workspace = true
