[package]
name = "omnifs-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Host view cache and canonical byte store for omnifs"
categories = ["filesystem", "wasm"]
keywords = ["omnifs", "cache", "filesystem"]

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
moka = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
omnifs-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
