[package]
name = "omnifs-caps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The omnifs capability subsystem: data model, invariants, and matching semantics for provider sandboxing. Enforcement lives in the host."

[dependencies]
serde = { workspace = true }
schemars = { workspace = true, features = ["indexmap2"] }
utoipa = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
