[package]
name = "omnifs-caps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The omnifs capability declaration model used by provider manifests and WIT. Enforcement lives in the host."

[dependencies]
serde = { workspace = true }
schemars = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
