[package]
name = "omnifs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for mounting omnifs virtual filesystems"
categories = ["filesystem", "command-line-utilities"]
keywords = ["omnifs", "fuse", "filesystem", "wasm", "cli"]

[[bin]]
name = "omnifs"
path = "src/main.rs"

[dependencies]
omnifs-caps = { workspace = true }
omnifs-api = { workspace = true }
omnifs-engine = { workspace = true }
omnifs-daemon = { workspace = true, optional = true }
omnifs-nfs = { workspace = true, optional = true }
omnifs-mtab = { workspace = true }
omnifs-workspace = { workspace = true }
omnifs-auth = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
# Unix-socket control transport for the host-native daemon. reqwest speaks only
# TCP, so the UDS path uses hyper + hyperlocal directly.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
hyperlocal = "0.9"
http = { workspace = true }
bytes = "1"
hex = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
secrecy = "0.10"
anstream = "1"
owo-colors = "4"
indicatif = "0.17"
inquire = "0.7"
arboard = { version = "3", default-features = false }
time = { workspace = true }
bollard = { workspace = true }
futures-util = "0.3"
webbrowser = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
tar = { workspace = true }
zstd = { workspace = true }

[features]
default = ["daemon"]
daemon = ["dep:omnifs-daemon", "dep:omnifs-nfs"]

[dev-dependencies]
tempfile = { workspace = true }
# Shares the cross-process NFS serialization lock (one port owner) with the
# frontend conformance matrix. No cycle: omnifs-itest does not depend on
# omnifs-cli.
omnifs-itest = { path = "../omnifs-itest" }

[build-dependencies]
tar = { workspace = true }
zstd = { workspace = true }

[lints]
workspace = true
