[package]
name = "omnifs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for mounting omnifs virtual filesystems"
categories = ["filesystem", "command-line-utilities"]
keywords = ["omnifs", "fuse", "filesystem", "wasm", "cli"]

[[bin]]
name = "omnifs"
path = "src/main.rs"

[dependencies]
omnifs-caps = { workspace = true }
omnifs-api = { workspace = true }
omnifs-engine = { workspace = true, features = ["runtime"] }
omnifs-nfs = { workspace = true }
omnifs-mtab = { workspace = true }
omnifs-workspace = { workspace = true }
omnifs-auth = { workspace = true }
omnifs-vfs-wire = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
toml = "0.8"
secrecy = "0.10"
anstream = "1"
owo-colors = "4"
cliclack = "0.5.5"
arboard = { version = "3", default-features = false }
time = { workspace = true }
bollard = { workspace = true }
futures-util = "0.3"
webbrowser = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
tar = { workspace = true }
zstd = { workspace = true }
tabled = { version = "0.21.0", features = ["ansi"] }
unicode-width = { workspace = true }
getrandom = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
# Shares the cross-process NFS serialization lock (one port owner) with the
# frontend conformance matrix. No cycle: omnifs-itest does not depend on
# omnifs-cli.
omnifs-itest = { path = "../omnifs-itest" }

[build-dependencies]
tar = { workspace = true }
zstd = { workspace = true }

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30", features = ["net"] }
