[package]
name = "omnifs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core omnifs protocol types"
categories = ["filesystem", "development-tools"]
keywords = ["omnifs", "filesystem", "protocol"]

[dependencies]
strum = { workspace = true }
mime = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
module_inception = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
