[package]
name = "omnifs-creds"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Host-side credential store for omnifs mounts (keyring / file fallback)."

[dependencies]
omnifs-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
secrecy = { version = "0.10", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
time = { workspace = true, features = ["serde", "formatting"] }
fs2 = { workspace = true }
atomic-write-file = "0.3"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
