[package]
name = "omnifs-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "omnifs runtime daemon: provider registry and FUSE mount loop"
categories = ["filesystem"]
keywords = ["omnifs", "fuse", "filesystem", "wasm", "daemon"]

[[bin]]
name = "omnifsd-openapi"
path = "src/bin/openapi.rs"

[dependencies]
omnifs-api = { workspace = true }
omnifs-auth = { workspace = true }
omnifs-workspace = { workspace = true }
omnifs-engine = { workspace = true }
omnifs-vfs-wire = { workspace = true }
omnifs-nfs = { workspace = true }
anyhow = { workspace = true }
axum = "0.8"
clap = { workspace = true }
constant_time_eq = "0.4"
getrandom = "0.3"
hex = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting"] }

# FUSE links fuser, which is Linux-only; the host-native NFS frontend builds on macOS without it.
[target.'cfg(target_os = "linux")'.dependencies]
# `default-features = false`: the daemon only calls `omnifs_fuse::mount`
# in-process; it never wants the `bin` feature's arg-parsing/wire-attach deps
# that back the separate `omnifs-fuse` runner binary (see that crate's
# Cargo.toml). Not `workspace = true`: Cargo forbids a member from overriding
# `default-features` on an inherited dependency, so this one spells out
# path/version directly instead of inheriting the workspace table entry.
omnifs-fuse = { path = "../omnifs-fuse", version = "0.2.1", default-features = false }
omnifs-mtab = { workspace = true }
nix = { version = "0.30", features = ["net"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }

[lints]
workspace = true
