[package]
name = "omnifs-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "omnifs runtime daemon: provider registry and namespace server"
categories = ["filesystem"]
keywords = ["omnifs", "fuse", "filesystem", "wasm", "daemon"]

[dependencies]
omnifs-api = { workspace = true }
omnifs-auth = { workspace = true }
omnifs-workspace = { workspace = true }
omnifs-engine = { workspace = true, features = ["runtime"] }
omnifs-vfs-wire = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
getrandom = "0.3"
hex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30", features = ["net"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = { workspace = true }

[lints]
workspace = true
