[package]
name = "omnifs-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Trusted runtime, cache, and projection engine for the omnifs virtual filesystem"
categories = ["filesystem", "wasm"]
keywords = ["omnifs", "fuse", "wasm", "wasmtime", "filesystem"]

[dependencies]
wasmtime = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
reqwest-oauth2 = { package = "reqwest", version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
futures = "0.3"
url = "2"
wasmtime-wasi = { version = "46.0.1", default-features = false, features = ["p2", "p3"] }
sha2 = { workspace = true }
tempfile = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
omnifs-core = { workspace = true }
omnifs-caps = { workspace = true }
omnifs-workspace = { workspace = true }
omnifs-auth = { workspace = true }
omnifs-api = { workspace = true }
omnifs-wit = { workspace = true, features = ["host-bindings"] }
anyhow = { workspace = true }
fjall = { workspace = true }
moka = { workspace = true }
arc-swap = { workspace = true }
async_singleflight = { workspace = true }
crossbeam-queue = "0.3"
secrecy = "0.10"
time = { workspace = true, features = ["formatting"] }

[dev-dependencies]
http = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
wasmtime = { workspace = true }
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
omnifs-itest = { path = "../omnifs-itest" }

[lints]
workspace = true
