[package]
name = "omnifs-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Trusted runtime, cache, and projection engine for the omnifs virtual filesystem"
categories = ["filesystem", "wasm"]
keywords = ["omnifs", "fuse", "wasm", "wasmtime", "filesystem"]

[dependencies]
wasmtime = { workspace = true, optional = true }
tokio = { workspace = true }
reqwest = { workspace = true, optional = true }
reqwest-oauth2 = { package = "reqwest", version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
blake3 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
postcard = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
thiserror = { workspace = true }
dashmap = { workspace = true, optional = true }
parking_lot = { workspace = true }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
url = { version = "2", optional = true }
wasmtime-wasi = { version = "46.0.1", default-features = false, features = ["p2"], optional = true }
sha2 = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
omnifs-core = { workspace = true, optional = true }
omnifs-caps = { workspace = true, optional = true }
omnifs-workspace = { workspace = true, optional = true }
omnifs-auth = { workspace = true, optional = true }
omnifs-api = { workspace = true, optional = true }
omnifs-wit = { workspace = true, features = ["host-bindings"], optional = true }
anyhow = { workspace = true, optional = true }
fjall = { workspace = true, optional = true }
moka = { workspace = true, optional = true }
crossbeam-queue = { version = "0.3", optional = true }
time = { workspace = true, features = ["formatting"], optional = true }

[features]
default = ["runtime"]
runtime = [
    "dep:anyhow",
    "dep:blake3",
    "dep:crossbeam-queue",
    "dep:dashmap",
    "dep:fjall",
    "dep:flate2",
    "dep:hex",
    "dep:moka",
    "dep:omnifs-api",
    "dep:omnifs-auth",
    "dep:omnifs-caps",
    "dep:omnifs-core",
    "dep:omnifs-wit",
    "dep:omnifs-workspace",
    "dep:reqwest",
    "dep:reqwest-oauth2",
    "dep:serde_json",
    "dep:sha2",
    "dep:tar",
    "dep:tempfile",
    "dep:time",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:url",
    "dep:wasmtime",
    "dep:wasmtime-wasi",
    "dep:zip",
]

[dev-dependencies]
http = { workspace = true }
secrecy = "0.10"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = { workspace = true }
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
omnifs-itest = { path = "../omnifs-itest" }

[lints]
workspace = true
