[package]
name = "omnifs-fixture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Testcontainers-backed fixtures for the omnifs dev session"

[dependencies]
anyhow = { workspace = true }
bollard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
testcontainers = { workspace = true, features = ["docker-compose"] }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
