[package]
name = "omnifs-fuse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Linux FUSE frontend adapter for omnifs"
categories = ["filesystem"]
keywords = ["omnifs", "fuse", "filesystem"]

[dependencies]
dashmap = { workspace = true }
fuser = { version = "0.17", features = ["macos-no-mount"] }
libc = { workspace = true }
omnifs-engine = { workspace = true }
omnifs-core = { workspace = true }
omnifs-api = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
omnifs-wit = { workspace = true, features = ["host-bindings"] }
omnifs-workspace = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
